# rask

./: .gitignore  Cargo.toml  README.md  release_validation.scl
docs/: language_spec.md  stdlib_reference.md
examples/: url_import.rask
plans/: plan.md
sculk/: Cargo.toml  README.md
sculk/examples/advanced/: arithmetic_pipeline.scl  function_chain_logic.scl  math_utils.scl  top_level_script.scl  use_local_module.scl
sculk/src/: lib.rs  main.rs
sculk/src/backend/: cranelift.rs
sculk/src/codegen/: lowering.rs
sculk/src/frontend/: mod.rs
sculk/src/ir/: mod.rs
sculk/src/optimize/: mod.rs
sculk/src/runtime/: mod.rs
sculk/tests/: compile_tests.rs
src/: lib.rs  main.rs
src/docgen/: mod.rs
src/errors/: pretty.rs
src/formatter/: mod.rs
src/lexer/: mod.rs  token.rs
src/lint/: mod.rs
src/parser/: ast.rs  expr.rs  mod.rs
src/repl/: highlighter.rs  mod.rs
src/runtime/: builtins.rs  mod.rs  value.rs
src/stdlib/: crypto.rs  env.rs  fs.rs  json.rs  math.rs  mod.rs  path.rs  time.rs
src/typechecker/: mod.rs  types.rs
src/vm/: mod.rs
stdlib/std/: README.md  http.rask
tests/: lexer_tests.rs  parser_tests.rs  runtime_tests.rs  typechecker_tests.rs
