[package]
name = "scalf"
version = "0.1.0"
edition = "2021"
description = "SCALF - A scripting language with zero dependency hell"
license = "MIT"

[dependencies]
serde_json = "1.0"
unicode-segmentation = "1.11"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
rustyline = "14.0"

[features]
default = ["net"]
net = ["dep:reqwest"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
